Sec11_Chap102-XX: fixed the controller tests